# Fake-Data-Generator

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/MythosMaker.egg-info/: PKG-INFO
src/data_generator_Ryan-Comerford/functions/: generate_functions.py
src/data_generator_Ryan-Comerford/models/: sql_models.py
src/data_generator_Ryan-Comerford/utils/: string_utils.py
src/data_generator_Ryan_Comerford.egg-info/: PKG-INFO  SOURCES.txt
src/example_package_YOUR_USERNAME_HERE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fake_data_generator.egg-info/: PKG-INFO  SOURCES.txt
src/fake_data_generator/functions/: generate_functions.py
tests/: database.db  main.py
tests/models/: sql_models.py
