[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_generator_Ryan-Comerford"
version = "0.0.1"
authors = [
  { name="Ryan William Comerford", email="comerford.ryan31@gmail.com" },
]
description = "A simple package to generate fake data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Ryan-Comerford/Data-Generator"
Issues = "https://github.com/Ryan-Comerford/Data-Generator/issues"